--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,6 +6,8 @@
 		"noEmit": true,
 		"allowJs": true,
 		"checkJs": true,
+		"strict": true,
+		"composite": true,
 
 		/* Preact Config */
 		"jsx": "react-jsx",
