feat: use env file for user/pass and host/port

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.9.0",
+		"@types/node": "20",
 		"typescript": "^5.5.4",
 		"vite": "^5.3.3",
 		"webpack": "npm:ignoredep@^200.9999.0",
