--- a/.env.template
+++ b/.env.template
@@ -25,8 +25,7 @@ SOCIAL_BE_PORT=5000
 
 # Backend access URL for frontend.
 # Usually the same as the bind host and ports.
-SOCIAL_FE_BE_HOST=localhost
-SOCIAL_FE_BE_PORT=5000
+SOCIAL_FE_BE_URL=http://localhost:5000/
 
 ## ── Frontend Configuration ───────────────────────────────
 
