--- a/.env.template
+++ b/.env.template
@@ -27,6 +27,10 @@ SOCIAL_BE_PORT=5000
 # Usually the same as the bind host and ports.
 SOCIAL_FE_BE_URL=http://localhost:5000/
 
+# Enable maintenance mode.
+# Set to 1 to activate.
+SOCIAL_BE_MAINTENANCE=0
+
 ## ── Frontend Configuration ───────────────────────────────
 
 # Frontend bind host and port.
