--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,3 +15,10 @@ dependencies = [
 
 [tool.mypy]
 plugins = ['pydantic.mypy']
+
+[dependency-groups]
+dev = [
+    "black>=24.10.0",
+    "flake8>=7.1.1",
+    "pylint>=3.3.2",
+]
