--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "email-validator>=2.2.0",
     "flask-cors>=5.0.0",
+    "faker>=33.1.0",
+    "tqdm>=4.67.1",
 ]
 
 [tool.mypy]
