--- a/.env.template
+++ b/.env.template
@@ -27,6 +27,17 @@ SOCIAL_BE_PORT=5000
 # Usually the same as the bind host and ports.
 SOCIAL_FE_BE_URL=http://localhost:5000/
 
+# Secret key for JWT.
+SOCIAL_BE_JWT_SECRET=ChangeThis
+
+# Expiry time of JWT tokens relative to login, in seconds.
+# Set to 0 to disable expiry.
+SOCIAL_BE_JWT_EXPIRY=86400
+
+# Backend username and password for admin.
+SOCIAL_BE_ADMIN_EMAIL=admin@localhost.example.com
+SOCIAL_BE_ADMIN_PASS=admin
+
 # Enable maintenance mode.
 # Set to 1 to activate.
 SOCIAL_BE_MAINTENANCE=0
