--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,15 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "bson>=0.5.10",
     "flask-openapi3[rapidoc]>=4.0.3",
     "flask>=3.1.0",
-    "pymongo>=4.10.1",
     "python-dotenv>=1.0.1",
     "email-validator>=2.2.0",
     "flask-cors>=5.0.0",
     "faker>=33.1.0",
     "tqdm>=4.67.1",
+    "flask-bcrypt>=1.0.1",
+    "flask-jwt-extended>=4.7.1",
+    "pymongo>=4.10.1",
 ]
 
 [tool.mypy]
