--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,9 +20,14 @@ dependencies = [
 [tool.mypy]
 plugins = ['pydantic.mypy']
 
+[tool.ruff.lint]
+select = ['ALL']
+ignore = ['D', 'COM812']
+
+[tool.ruff.format]
+docstring-code-format = true
+
 [dependency-groups]
 dev = [
-    "black>=24.10.0",
-    "flake8>=7.1.1",
-    "pylint>=3.3.2",
+    "ruff>=0.9.3",
 ]
