--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,7 +26,12 @@ cache-dir = ".venv/cache/ruff"
 
 [tool.ruff.lint]
 select = ['ALL']
-ignore = ['D', 'COM812', 'S606']
+ignore = [
+    'COM812', # missing-trailing-comma, conflicts with formatter
+    'D203',   # incorrect-blank-line-before-class, conflicts with no-blank-line-before-class
+    'D213',   # multi-line-summary-second-line, conflicts with multi-line-summary-first-line
+    'S606',   # start-process-with-no-shell, conflicts with start-process-with-a-shell
+]
 
 [tool.ruff.format]
 docstring-code-format = true
